[package]
name = "ipx"
license = "MIT"
version = "0.1.3"
edition = "2021"
author = ["kremilly"]
keywords = ["ipinfo", "ip-geolocation", "geolocation", "ip"]
description = "Empower your IP data retrieval tasks by leveraging Rust's capabilities to effortlessly extract comprehensive IP information from URLs, enhancing efficiency and precision in data processing workflows."
homepage = "https://kremilly.com"
documentation = "https://kremilly.com/docs/ipx"
repository = "https://github.com/kremilly/IPX"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipgeolocate = "0.3.6"
tokio = { version = "1.37.0", features = ["full"] }
